Fixes: NB#223167 - Wrong color of toolbar buttons used for Sound settings

--- a/src/soundsettingsapplet/libsoundsettingsapplet.css
+++ b/src/soundsettingsapplet/libsoundsettingsapplet.css
@@ -5,3 +5,8 @@
 	margin-right: 0;
 	margin-bottom: 0;
 }
+
+#MApplicationWindow {
+    toolbar-style-name: "MToolbarStyleInverted";
+}
+
